# Anjay-mbedos-client

./: .clang-format  .gitignore  .mbed  .mbedignore  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  X_NUCLEO_IKS01A2.lib  accelerometer.cpp  accelerometer.h  anjay-mbedos.lib  avs_qspi.cpp  avs_qspi.h  barometer.cpp  barometer.h  bootstrap.py  conn_monitoring_object.cpp  conn_monitoring_object.h  default_config.h  device_config_serial_menu.cpp  device_config_serial_menu.h  device_object.cpp  device_object.h  firmwarize.py  fw_update.cpp  fw_update.h  humidity.cpp  humidity.h  joystick.cpp  joystick.h  magnetometer.cpp  magnetometer.h  main.cpp  mbed-bootloader.lib  mbed-os.lib  mbed_app.json  mbed_settings.py  persistence.cpp  persistence.h  (+4 more)
anjay-mbed-fota/: .mbedignore  anjay_mbed_fota_conversions.h  mbed_cloud_fota_wrapper.cpp  mbed_cloud_fota_wrapper.h  mbed_lib.json
anjay-mbed-fota/pal_services_api_fixup/: pal.h  pal_TLS.h  pal_entropy.h  pal_fileSystem.h  pal_internalFlash.h  pal_macros.h  pal_network.h  pal_time.h  pal_update.h
